invalid_label_arg_keywords_test/invalid_label_arg_keywords_test.src
.IPPcode24
CALL
CALL GF@a
CALL string
CALL string@bonjour
LABEL
LABEL TF@b
LABEL int
LABEL int@5
JUMP
JUMP bool
JUMP bool@false
JUMP LF@c